fixed alignment in columns and controls

--- a/material.css
+++ b/material.css
@@ -321,46 +321,53 @@ a {
     -moz-border-radius: 4px;
 	-webkit-border-radius: 4px;
     border-radius: 4px;
+    -webkit-flex-direction: column;
+    flex-direction: column;
 }
 
-.card p.title {
+.card > p.title {
     margin: 32px;
     color: rgba(38, 50, 56, 1);
 }
 
-.card p.detail {
-    margin: 32px;
-    font-family: 'ClearSans', sans-serif !important;
+.card > p.detail {
+    margin: 0;
+    font-family: 'Lato', sans-serif !important;
     color: rgba(38, 50, 56, 1);
+}
+
+.card > .title + .detail,
+.card > .detail + .detail {
+    margin-top: 16px;
 }
 
 @media screen and (max-width: 600px) {
-    .card p.title {
-        font-size: 8px;
-    }
-
-    .card p.detail {
-        font-size: 4px;
-    }
-}
-
-@media screen and (min-width: 601px) and (max-width: 992px) {
-    .card p.title {
-        font-size: 8px;
-    }
-
-    .card p.detail {
-        font-size: 8px;
-    }
-}
-
-@media screen and (min-width: 993px) {
     .card p.title {
         font-size: 16px;
     }
 
     .card p.detail {
         font-size: 12px;
+    }
+}
+
+@media screen and (min-width: 601px) and (max-width: 992px) {
+    .card p.title {
+        font-size: 16px;
+    }
+
+    .card p.detail {
+        font-size: 12px;
+    }
+}
+
+@media screen and (min-width: 993px) {
+    .card p.title {
+        font-size: 24px;
+    }
+
+    .card p.detail {
+        font-size: 14px;
     }
 }
 
@@ -384,7 +391,7 @@ a {
 }
 
 @media screen and (max-width: 600px) {
-    .if-s-hide,
+    .if-not-s,
     .if-m,
     .if-l {
         visibility: hidden !important;
@@ -393,7 +400,7 @@ a {
 }
 
 @media screen and (min-width: 601px) and (max-width: 992px) {
-    .if-m-hide,
+    .if-not-m,
     .if-s,
     .if-l {
         visibility: hidden !important;
@@ -402,7 +409,7 @@ a {
 }
 
 @media screen and (min-width: 993px) {
-    .if-l-hide,
+    .if-not-l,
     .if-s,
     .if-m {
         visibility: hidden !important;
@@ -526,13 +533,46 @@ column + .column,
     margin-left: 0 !important;
 }
 
-column.pad,
-.column.pad,
 row.pad > column,
 row.pad > .column,
 .row.pad > column,
 .row.pad > .column {
     padding: 16px;
+}
+
+column.pad > row,
+column.pad > .row,
+.column.pad > row,
+.column.pad > .row {
+    padding: 16px;
+}
+
+.container > column:first-child,
+.container > column:first-child,
+.container > .column:first-child,
+.container > .column:first-child {
+    margin-left: 0 !important;
+}
+
+.container > column:last-child,
+.container > column:last-child,
+.container > .column:last-child,
+.container > .column:last-child {
+    margin-right: 0 !important;
+}
+
+.container > row:first-child,
+.container > row:first-child,
+.container > .row:first-child,
+.container > .row:first-child {
+    margin-left: 0 !important;
+}
+
+.container > row:last-child,
+.container > row:last-child,
+.container > .row:last-child,
+.container > .row:last-child {
+    margin-right: 0 !important;
 }
 
 row.top,
@@ -918,6 +958,7 @@ nav.fixed {
     height: 64px;
     top: 0;
     left: 0;
+    display: inline-flex;
 }
 
 .toolbar > .right-controls {
@@ -925,6 +966,12 @@ nav.fixed {
     height: 64px;
     top: 0;
     right: 0;
+    display: inline-flex;
+}
+
+.toolbar > .center-controls {
+    margin: 0 auto !important;
+    display: inline-flex;
 }
 
 .toolbar.tiny {
@@ -939,25 +986,31 @@ nav.fixed {
     height: 96px !important;
 }
 
+.toolbar.x-large {
+    height: 144px !important;
+}
+
 .toolbar > a,
 .toolbar > .left-controls > a,
+.toolbar > .center-controls > a,
 .toolbar > .right-controls > a,
 .toolbar > button,
 .toolbar > .left-controls > button,
+.toolbar > .center-controls > button,
 .toolbar > .right-controls > button {
+    margin: 0 16px !important;
     position: relative;
 	height: 64px;
     border: none;
+    font-size: 20px;
 	text-align: center;
 	line-height: 64px;
     background: none;
     z-index: 1;
-	font-size: 20px;
-    cursor: pointer;
+	cursor: pointer;
 }
 
-.toolbar > header,
-.toolbar > .center-controls {
+.toolbar > header {
     padding: 0 32px;
     position: relative;
     height: 64px;
@@ -993,7 +1046,6 @@ nav.fixed {
 .toolbar.tiny > .left-controls > button,
 .toolbar.tiny > .center-controls > button,
 .toolbar.tiny > .right-controls > button {
-    margin: 0 32px !important;
     height: 48px !important;
 	font-size: 14px;
 	line-height: 48px;
@@ -1018,7 +1070,6 @@ nav.fixed {
 .toolbar.small > .left-controls > button,
 .toolbar.small > .center-controls > button,
 .toolbar.small > .right-controls > button {
-    margin: 0 32px !important;
     height: 56px !important;
 	font-size: 18px;
 	line-height: 56px;
@@ -1047,13 +1098,40 @@ nav.fixed {
 .toolbar.large > .left-controls > button,
 .toolbar.large > .center-controls > button,
 .toolbar.large > .right-controls > button {
-    margin: 32px 32px 0 32px !important;
+    margin: 16px 32px !important;
     height: 64px !important;
     line-height: 64px !important;
 }
 
 .toolbar.large > header.title {
-    line-height: 96px !important;
+    line-height: 144px !important;
+}
+
+.toolbar.x-large > header {
+    height: 144px !important;
+}
+
+.toolbar.x-large > .left-controls,
+.toolbar.x-large > .center-controls,
+.toolbar.x-large > .right-controls {
+    height: 144px;
+}
+
+.toolbar.x-large > a,
+.toolbar.x-large > .left-controls > a,
+.toolbar.x-large > .center-controls > a,
+.toolbar.x-large > .right-controls > a,
+.toolbar.x-large > button,
+.toolbar.x-large > .left-controls > button,
+.toolbar.x-large > .center-controls > button,
+.toolbar.x-large > .right-controls > button {
+    margin: 32px 32px 0 32px !important;
+    height: 64px !important;
+    line-height: 64px !important;
+}
+
+.toolbar.x-large > header.title {
+    line-height: 144px !important;
 }
 
 /* MaterialColor Begin */
